# kfs

./: .gitignore  Cargo.toml  Makefile  Vagrantfile  kfs.json  linker.ld  readme.md
.cargo/: config.toml
config/: install.sh
src/: 42.txt  boot.s  help.txt  linker.ld  main.rs
src/arch/: kfs.json  test.json
src/cpu/: gdt.rs  idt.rs
src/driver/: mod.rs  ps2.rs  vga.rs  write.rs
src/grub/: grub.cfg
src/keyboard/: keyboard.rs  mod.rs
src/keyboard/input_method/: keycode.rs  mod.rs  modifiers.rs
src/keyboard/layout/: azerty.rs  mod.rs  qwerty.rs
src/memory/: directory.rs  mod.rs  page_table.rs  test.rs
src/terminal/: terminal.rs
src/utility/: allocator.rs  instruction.rs  mod.rs  multiboot.rs
